--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pytest (>=8.4.0,<9.0.0)",
-    "pytest-playwright (>=0.7.0,<0.8.0)"
+    "pytest-playwright (>=0.7.0,<0.8.0)",
+    "allure-pytest (>=2.14.3,<3.0.0)"
 ]
 
 
