--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "pytest (>=8.4.0,<9.0.0)",
     "pytest-playwright (>=0.7.0,<0.8.0)",
-    "allure-pytest (>=2.14.3,<3.0.0)"
+    "allure-pytest (>=2.14.3,<3.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 
